--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<script type="text/javascript" src="myPromise.js"></script>
-		<!--<script type="text/javascript" src="Promises.js"></script>-->
+		<script type="text/javascript" src="Promises.js"></script>
 	</head>
 	<body>
 	</body>
 </html>
 <script type="text/javascript">
-	let promise1 = new MyPromise((resolve, reject) => {
-//	let promise1 = new Promises((resolve, reject) => {
+	let promise1 = new Promises((resolve, reject) => {
 	  setTimeout(() => {
 //	    resolve('222')
 		reject('2222')
