--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <script type="text/javascript">
 	let promise1 = new Promises((resolve, reject) => {
 	  setTimeout(() => {
-//	    resolve('222')
-		reject('2222')
-	  },500)
+	    reject('fail')
+	  }, 1000)
 	})
-	
-	var promise2 = promise1.then(res => {console.log(res)}).catch(err=>{console.log(err)})
-
-	promise2.then(ress => {
-	  console.log(ress)
+	console.log(promise1.deferred())
+	promise2 = promise1.then(res => res, '这里的onRejected本来是一个函数，但现在不是')
+	promise2.then(res => {
+	  console.log(res)
+	}, err => {
+	  console.log(err)  // 1秒后打印出：fail
 	})
 
 </script>
